UV sculpt (cursor) getting stuck on object change #38574

Closed
opened 2014-02-10 14:08:42 +01:00 by Igor Donevski · 8 comments

System Information
OSX 10.9, ATi 6970

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error
Enable UV sculpt, change object, UV image editor changes to render result, UV sculpt brush cursor still active

Exact steps for others to reproduce the error
Enable UV sculpt, change object, UV image editor changes to render result, UV sculpt brush cursor still active. Maybe needed to change object by clicking on the mesh icon in the outliner, but I remember it getting stuck in other cases also.

**System Information** OSX 10.9, ATi 6970 **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** Enable UV sculpt, change object, UV image editor changes to render result, UV sculpt brush cursor still active **Exact steps for others to reproduce the error** Enable UV sculpt, change object, UV image editor changes to render result, UV sculpt brush cursor still active. Maybe needed to change object by clicking on the mesh icon in the outliner, but I remember it getting stuck in other cases also.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @el_diablo

Added subscriber: @el_diablo
Antonis Ryakiotakis was assigned by Brecht Van Lommel 2014-02-10 14:23:24 +01:00

I'm not sure what the bug is. The render result is not restored here when choosing another object. What does happen is that the cursor is still displayed even when the render result is displayed. Is that the issue?

I'm not sure what the bug is. The render result is not restored here when choosing another object. What does happen is that the cursor is still displayed even when the render result is displayed. Is that the issue?
Author

I think thats the the problem. Its not a big issue but more of an UX problem. If the render result is active you don't have the UV menus/functionality so the cursor should revert to the base one in my opinion. I actually wrote that bug/UX issue a few months back so I can't remember all the specifics, but I think it was about the cursor mostly. Sorry about the vagueness.

I think thats the the problem. Its not a big issue but more of an UX problem. If the render result is active you don't have the UV menus/functionality so the cursor should revert to the base one in my opinion. I actually wrote that bug/UX issue a few months back so I can't remember all the specifics, but I think it was about the cursor mostly. Sorry about the vagueness.

This issue was referenced by blender/blender-addons-contrib@1dfd82d2bc

This issue was referenced by blender/blender-addons-contrib@1dfd82d2bcdd28e6230878d643c19b93a31cb4cd

This issue was referenced by 1dfd82d2bc

This issue was referenced by 1dfd82d2bcdd28e6230878d643c19b93a31cb4cd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1dfd82d2bc.

Closed by commit 1dfd82d2bc.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38574
No description provided.