Fix T38574 uv sculpting cursor could be visible during render preview in image editor.